show unit in product, checkout, cart, ... htaccess change to avoid cross domain error for ajax sending from http to httpS

--- a/KoketSite/.htaccess
+++ b/KoketSite/.htaccess
@@ -216,4 +216,11 @@
 
     #FileETag none
 
+
+
+<IfModule mod_headers.c>
+    Header set Access-Control-Allow-Origin "*"
+</IfModule>
+
 SetEnv MAGE_IS_DEVELOPER_MODE "true"
+
