local version: enable dev mode & allow all acces

--- a/KoketSite/.htaccess
+++ b/KoketSite/.htaccess
@@ -222,5 +222,5 @@
     Header set Access-Control-Allow-Origin "*"
 </IfModule>
 
-SetEnv MAGE_IS_DEVELOPER_MODE "false"
+SetEnv MAGE_IS_DEVELOPER_MODE "true"
 
