--- a/KoketSite/.htaccess
+++ b/KoketSite/.htaccess
@@ -192,9 +192,23 @@
 ## Add default Expires header
 ## http://developer.yahoo.com/performance/rules.html#expires
 
-    ExpiresDefault "access plus 1 year"
+    #ExpiresDefault "access plus 1 year"
+
+    ExpiresActive On
+    ExpiresByType image/jpg "access 1 year"
+    ExpiresByType image/jpeg "access 1 year"
+    ExpiresByType image/gif "access 1 year"
+    ExpiresByType image/png "access 1 year"
+    ExpiresByType text/css "access 1 month"
+    ExpiresByType application/pdf "access 1 month"
+    ExpiresByType application/x-javascript "access 1 month"
+    ExpiresByType application/x-shockwave-flash "access 1 month"
+    ExpiresByType image/x-icon "access 1 year"
+    ExpiresDefault "access 2 days"
 
 </IfModule>
+
+
 
 ############################################
 ## By default allow all access
@@ -221,6 +235,8 @@
 <IfModule mod_headers.c>
     Header set Access-Control-Allow-Origin "*"
 </IfModule>
+
+
 
 SetEnv MAGE_IS_DEVELOPER_MODE "true"
 
