script to import newsletter subscribers

--- a/KoketSite/var/resource_config.json
+++ b/KoketSite/var/resource_config.json
@@ -1,1 +1,1 @@
-{"media_directory":"\/home\/kokettek\/public_html\/media","allowed_resources":["css","css_secure","js","favicon","email","wysiwyg","catalog","custom_options","dhl","captcha","xmlconnect"],"update_time":"3600"}
+{"media_directory":"\/Users\/Gert\/Documents\/gitProjects\/koket\/KoketSite\/media","allowed_resources":["css","css_secure","js","favicon","email","wysiwyg","catalog","custom_options","dhl","captcha","xmlconnect"],"update_time":"3600"}
