--- a/KoketSite/.htaccess
+++ b/KoketSite/.htaccess
@@ -1,4 +1,13 @@
+
+<IfModule mod_dtimeout.c>
+    <Files ~ ".php">
+        SetEnvIf Request_URI "index" DynamicTimeout=300
+    </Files>
+</IfModule>
+
+
 ############################################
+
 ## uncomment these lines for CGI mode
 ## make sure to specify the correct cgi php binary file name
 ## it might be /cgi-bin/php-cgi
@@ -194,21 +203,34 @@
 
     #ExpiresDefault "access plus 1 year"
 
+#    ExpiresActive On
+#    ExpiresByType image/jpg "access 1 year"
+#    ExpiresByType image/jpeg "access 1 year"
+#    ExpiresByType image/gif "access 1 year"
+#    ExpiresByType image/png "access 1 year"
+#    ExpiresByType text/css "access 1 month"
+#    ExpiresByType application/pdf "access 1 month"
+#    ExpiresByType application/x-javascript "access 1 month"
+#    ExpiresByType application/x-shockwave-flash "access 1 month"
+#    ExpiresByType image/x-icon "access 1 year"
+#    ExpiresDefault "access 2 days"
+
+    # Enable expirations
     ExpiresActive On
-    ExpiresByType image/jpg "access 1 year"
-    ExpiresByType image/jpeg "access 1 year"
-    ExpiresByType image/gif "access 1 year"
-    ExpiresByType image/png "access 1 year"
-    ExpiresByType text/css "access 1 month"
-    ExpiresByType application/pdf "access 1 month"
-    ExpiresByType application/x-javascript "access 1 month"
-    ExpiresByType application/x-shockwave-flash "access 1 month"
-    ExpiresByType image/x-icon "access 1 year"
-    ExpiresDefault "access 2 days"
-
+    # Default directive
+    ExpiresDefault "access plus 1 year"
+    # My favicon
+    ExpiresByType image/x-icon "access plus 1 year"
+    # Images
+    ExpiresByType image/gif "access plus 1 month"
+    ExpiresByType image/png "access plus 1 month"
+    ExpiresByType image/jpg "access plus 1 month"
+    ExpiresByType image/jpeg "access plus 1 month"
+    # CSS
+    ExpiresByType text/css "access plus 1 month"
+    # Javascript
+    ExpiresByType application/javascript "access plus 1 year"
 </IfModule>
-
-
 
 ############################################
 ## By default allow all access
@@ -238,5 +260,5 @@
 
 
 
-SetEnv MAGE_IS_DEVELOPER_MODE "true"
+SetEnv MAGE_IS_DEVELOPER_MODE "false"
 
